@@ -6,6 +6,7 @@
 [+] Simplify metadata generation by introducing TotalCountListMetadataDto, OffsetLimitMetadataDto, PagedListMetadataDto.
 [+] Add enum utils GetNamesWithDescriptions, GetValuesWithDescriptions.
 [-] Remove string extensions methods.
+[-] Remove ObjectUtils.CreateTypeFactory .
 [*] Remove not needed dependencies.
 
 2.0.1 [2019-03-13]
